--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,15 @@ h2 {
     grid-column-start: 3;
 }
 
+.item_a {
+    grid-row-start: 3;
+    grid-column-start: 3;
+}
+
+.item_b {
+    grid-column-start: 3;
+}
+
 
 /* 1. Give it a width of 800px */
 
